# ios-app-icons

./: .env.example  .gitignore  CLAUDE.md  QUICKSTART.md  README.md  STYLE_SKILL.md  activate.sh  alembic.ini  docker-compose.yml  favicon-generator-prompt.md  favicon-generator.ts  generate-cc-favicon.ts  generate-smartskin-icon.ts  health-to-obsidian-icon.html  icon-style  package.json  pyproject.toml  setup.sh  style_gen.py
.beads/: issues.jsonl
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: IconGallery.tsx  IconGeneratorForm.tsx  JobProgress.tsx  index.ts
frontend/src/hooks/: useIconGeneration.ts
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_add_refresh_tokens.py
src/icon_generator/: __init__.py  cli.py  config.py  generator.py  processor.py  prompts.py
src/icon_generator/api/: __init__.py  auth.py  job_queue.py  main.py  models.py
src/icon_generator/api/schemas/: __init__.py  auth.py
src/icon_generator/auth/: __init__.py  config.py  dependencies.py  jwt.py  oauth.py  password.py
src/icon_generator/db/: __init__.py  database.py  init.py  models.py
