[project]
name = "ios-app-icon-generator"
version = "0.1.0"
description = "AI-powered iOS app icon generator using Stable Diffusion"
authors = [{name = "Cody Bontecou"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "replicate>=0.7.0",
    "pillow>=10.0.0",
    "rembg[cpu]>=2.0.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
icon-gen = "icon_generator.cli:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
